[INFER] Fix ADDPROP PIC recompilation hazard, bug 680797.