js/src/methodjit/PolyIC.cpp
@@ -623,6 +623,9 @@ class SetPropCompiler : public PICStubCompiler
             if (flags & Shape::METHOD)
                 obj->nativeSetSlot(shape->slot, f.regs.sp[-1]);
 
+            if (monitor.recompiled())
+                return Lookup_Uncacheable;
+
             /*
              * Test after calling putProperty since it can switch obj into
              * dictionary mode, specifically if the shape tree ancestor line
